Fix bugs for login view and article in mobile view
Fixed bugs for the login view overlapping the menu, and disabled
overflow on article in mobile view.

--- a/css/layout.css
+++ b/css/layout.css
@@ -27,10 +27,15 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, auto);
-    height: 100vh;
     width: 100vw;
     gap: 2vw;
     overflow-x: hidden;
+}
+
+@media screen and (min-width: 1024px) {
+    .grid_12-auto {
+        height: 100vh;
+    }
 }
 
 /* INDEX */
@@ -328,7 +333,6 @@
         .film_article {
             grid-column: 1 / span 12;
             grid-row: 2;
-            overflow: auto;
             margin-top: 5vh;
             margin-left: 1vw;
         }
@@ -340,6 +344,7 @@
                 margin: 0vh 1vw 10vh 5vw;
                 margin-top: 0vh;
                 margin-bottom: 10vh;
+                overflow: auto;
             }
         }
 
